src/test/ui/span/issue-25199.nll.stderr
error[E0597]: `container` does not live long enough
  --> $DIR/issue-25199.rs:83:5
   |
LL |     container.store(test);
   |     ^^^^^^^^^ borrowed value does not live long enough
LL |     //~^ ERROR `container` does not live long enough
LL | }
   | -
   | |
   | `container` dropped here while still borrowed
   | borrow later used here, when `container` is dropped

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
